--- a/src/app/components/packages/package-details/package-details.css
+++ b/src/app/components/packages/package-details/package-details.css
@@ -50,15 +50,11 @@
     display: none !important;
 }
 
-.modal-grid {
-    display: grid;
-    grid-template-columns: 1fr 380px;
-    gap: 18px;
-}
 
-@media (max-width: 900px) {
+
+@media (max-width: 750px) {
     .modal-grid {
-        grid-template-columns: 1fr;
+        flex-direction: column;
     }
 }
 
@@ -102,11 +98,14 @@
     border: 1px solid #e2e8f0;
 }
 
-.modal-grid {
-    width: 100%;
-    display: flex;
-    gap: 18px;
-    align-items: flex-start;
+@media(min-width:750px) {
+    .modal-grid {
+        width: 100%;
+        display: flex;
+        gap: 18px;
+        align-items: flex-start;
+        flex-direction: row;
+    }
 }
 
 .modal-main-content {
