--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -60,15 +60,15 @@
         <h3>Contact Info</h3>
         <div class="contact-info">
           <p>
-            📞
+            <mat-icon> phone </mat-icon>
             <a href="tel:+917989061456" class="contact-link">+91 7989061456</a>
           </p>
           <p>
-            ✉️
+            <mat-icon> mail </mat-icon>
             <a href="mailto:info@TravelX.com" class="contact-link">info@TravelX.com</a>
           </p>
           <p>
-            📍
+            <mat-icon> place </mat-icon>
             <a
               href="https://www.google.com/maps/search/?api=1&query=Deloitte+Tower+3,+Hyderabad,+Telangana"
               target="_blank"
