--- a/src/app/components/packages/packages/packages.html
+++ b/src/app/components/packages/packages/packages.html
@@ -74,7 +74,7 @@
           <p class="small">{{ package.location }}</p>
           <div class="package-meta">
             <div class="tag">{{ package.nights }}</div>
-            <div class="rating">★ {{ package.rating }}</div>
+            <div class="rating"><mat-icon> star</mat-icon>{{ package.rating }}</div>
           </div>
           <p>
             {{ package.title }} — a carefully curated trip including highlights of
