--- a/src/app/components/destination/destination.css
+++ b/src/app/components/destination/destination.css
@@ -104,6 +104,13 @@
         cursor: pointer;
         color: var(--primary);
       }
+      body.modal-open {
+        overflow: hidden;
+      }
+      .no-scroll {
+        overflow: hidden;
+        height: 100vh; /* lock full screen height */
+      }
       .package-body {
           padding: 16px;
           flex: 1;
@@ -409,8 +416,8 @@
 
 .slider img {
   width: 100%;
-  max-height: 400px;
-  object-fit: cover;
+  height: 400px;
+  object-fit: contain;
   border-radius: 10px;
 }
 
@@ -447,4 +454,8 @@
   margin-top: 12px;
   padding-left: 20px; /* adjust as needed */
   list-style-position: inside;
+}
+
+.slider img{
+
 }
